# knowledge-base

./: mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: devops.md  frontend.md  index.md  python.md
docs/LowCode/N8N/: n8n.md
docs/devops/: devops.md
docs/devops/ansible/: ansible.md  roles.md  vars_cond_loops_filter.md
docs/devops/ansible/CICD/: CICD.md
docs/devops/ansible/lab1/: lab1.md
docs/devops/ansible/parts/: commands.md  deploy_web_app.md  materials.md  test_filters.md  test_loops.md
docs/devops/cicd/: cicd.md
docs/devops/docker/: docker.md  windows_in_docker.md
docs/devops/docker/parts/: docker-commands.md  docker-compose-commands.md  dockerfile.md  (+1 more)
docs/devops/jpath/: jpath.md
docs/devops/linux/: linux.md  one_file.md
docs/devops/parts/: resources.md
docs/devops/terraform/: terraform.md
docs/glossary/: glossary.md
docs/ml/cuda/: cuda.md
docs/python/: fastapi.md  python.md
docs/python/basics/: basics.md
docs/python/fastapi/: alembic.md  fastapi.md
docs/python/interesting_resources/: interesting_resources.md
docs/python/interesting_tasks/: interesting_tasks.md
docs/python/package_managers/: creating_package.md
docs/python/package_managers/parts/: cli.py  core.py  core_text.py  ignore.py  pyproject.toml
docs/stylesheets/: extra.css
docs/themes/docker/: docker-commands.md  docker-compose-example.md  dockerfile-example.md
docs/to_see/: to_see.md
docs/tools/: VirtualPay.md  VirtualSim.md  hosting.md  terminal.md  vpn.md
docs/tools/Git/: git.md
docs/tools/postman/: postman.md
(+28 files in other folders)
