    ```toml
    [project]
    name = "context-analyzer"
    version = "0.1.3"
    description = "Analyze directory structure and export to JSON/TXT"
    readme = "README.md"
    requires-python = ">=3.10"
    dependencies = ["tqdm"]

    [project.scripts]
    context-analyzer = "context_analyzer.cli:main"

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [dependency-groups]
    dev = [
        "twine>=6.2.0",
    ]
    ```